[package]
name = "hfa-server"
version = "1.0.0"
edition = "2021"

[dependencies]
bytes = "1.4.0"
clap = { version = "4.3.8", features = ["derive"] }
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.99"
serde_yaml = "0.9.22"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
